# onesub

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_onesub.command
config/: example_fonts.json  example_placements.json  example_windows.json
data/prepared/: audio_analysis.json  captions.json  word_timings.json
data/rendered/: output.ass
documentation/: dev_guide.md
scripts/: bootstrap_python_env.sh
src/onesub/: __init__.py  audio_analysis.py  config.py  models.py  rendering.py  serialization.py  transcription.py
src/onesub-app/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
src/onesub-app/app/: layout.tsx  page.tsx
src/onesub-app/backend/: .env  go.mod  go.sum  main.go
src/onesub-app/components/: PreviewOverlay.tsx  SettingsPanel.tsx  SubtitleOverridesPanel.tsx  TimelineEditor.tsx  VideoPlayer.tsx  sampleData.ts
src/onesub-app/styles/: globals.css
src/onesub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/onesub/tasks/: __init__.py  prepare.py  render.py
